# learning-rust

./: .gitignore  GLOSSARY.md  README.md
comprehensive-rust/: README.md
comprehensive-rust/00-Setup-macOS/: README.md
comprehensive-rust/01-Day1-Morning/: README.md
comprehensive-rust/01-Day1-Morning/00-HelloWorld/: README.md
comprehensive-rust/01-Day1-Morning/01-WhyRust/: README.md
comprehensive-rust/01-Day1-Morning/02-BasicSyntax/: README.md
comprehensive-rust/01-Day1-Morning/03-Exercises/: README.md
comprehensive-rust/02-Day1-Afternoon/: README.md
comprehensive-rust/02-Day1-Afternoon/00-Variables/: README.md
comprehensive-rust/03-Day2-Morning/: README.md
comprehensive-rust/04-Day2-Afternoon/: README.md
comprehensive-rust/05-Day3-Morning/: README.md
comprehensive-rust/06-Day3-Afternoon/: README.md
comprehensive-rust/07-Day4-Morning/: README.md
comprehensive-rust/08-Day4-Afternoon/: README.md
fullstack-rust/: README.md
fullstack-rust/01-FirstWebApp/: README.md
fullstack-rust/01-FirstWebApp/messages-actix/: Cargo.toml
fullstack-rust/01-FirstWebApp/messages-actix/src/: lib.rs  main.rs
fullstack-rust/02-StatefulWebApp/: README.md
ml-libtorch/: .envrc  LICENSE  README.md  pyproject.toml
ml-libtorch/example-char-rnn/: Cargo.toml
ml-libtorch/example-char-rnn/data/: input.txt
ml-libtorch/example-char-rnn/src/: main.rs
ml-libtorch/example-computationalgraph/: Cargo.toml
ml-libtorch/example-computationalgraph/src/: main.rs
ml-libtorch/example-tensors/: Cargo.toml
ml-libtorch/example-tensors/src/: main.rs
(+58 files in other folders)
