[package]
name = "example-char-rnn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
indicatif = { version = "0.17.2", features = ["rayon"] }
tch = { version = "0.10.1", features = ["python", "cpython"] }
